--- a/scripts/setup_svhn_mnist_data.ipynb
+++ b/scripts/setup_svhn_mnist_data.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -19,33 +17,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using downloaded and verified file: /x/jhoffman/svhn/train_32x32.mat\n"
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Processing...\n",
+      "Done!\n",
+      "Downloading http://ufldl.stanford.edu/housenumbers/train_32x32.mat to ../data/svhn/train_32x32.mat\n"
      ]
     }
    ],
    "source": [
     "from torchvision import datasets\n",
     "\n",
-    "mnist_dataset = datasets.MNIST('/x/jhoffman/mnist/', train=True, transform=None, \n",
+    "mnist_dataset = datasets.MNIST('../data/mnist/', train=True, transform=None, \n",
     "                               target_transform=None, download=True)\n",
-    "svhn_dataset = datasets.SVHN('/x/jhoffman/svhn/', split='train', transform=None, \n",
+    "svhn_dataset = datasets.SVHN('../data/svhn/', split='train', transform=None, \n",
     "                             target_transform=None, download=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = '/x/jhoffman/cyclegan_data/svhn2mnist'\n",
+    "outdir = '../data/svhn2mnist'\n",
     "# SVHN->MNIST: convert to 32x32x3 images\n",
     "\n",
     "os.makedirs(join(outdir, 'trainB/images'), exist_ok=True)\n",
@@ -69,10 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# CUDA_VISIBLE_DEVICES=1 python train.py --name experiment_name \n",
@@ -96,18 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWAAAAB1CAYAAABwDTvQAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFwhJREFUeJzt3XtwlNX5wPHvBsK9SQiJgALh0kgEAuGmgBgicpsQMUEr\nBoIFWqBCQdsBIUgtKVcLaUkoFgMShktLGVEjjNyGcG2QAQtOFKIQC0gTLhUCGCJkd8/vj/29b9gm\n3Hf37G6ez8w7I7vvvvvkeN5nz3vec85rUUohhBDC8wJ0ByCEENWVJGAhhNBEErAQQmgiCVgIITSR\nBCyEEJpIAhZCCE0kAQshhCaSgIUQQhNJwEIIoUlNT36ZxWLxyml3SimLru+WMqlMyqRqUi6V+XqZ\nSAtYCCE0kQQshBCaSAIWQghNJAELIYQmkoCFEEITScB+pmvXrmRnZ5OdnY3NZsNms5GdnU2XLl10\nhyaE+B8WTy7I7oohIzVq1CA4ONj8969//WsA6tWrB0Dbtm2ZOHEiixYtIjk5GYAff/yRBQsWkJaW\nVuUx/WUYTUxMDLm5uQQFBVV678qVKzRq1Oiej+UvZXI3zz33HOvWrQOgT58+fP3117fdtzoMQ5s5\ncyZpaWkEBAQQFxcHwJ49e+74mepSV+7HvZaJR8cB348WLVpQq1YtevXqBUDv3r0BCAkJ4cUXX7zt\n586ePUtmZiZJSUlcu3YNgC+++OKulcjXPfnkk2zcuJHg4GCMH1Xj77958yaNGjWiZ8+efP755+Zr\nviY2NpZGjRrx0UcfueyY3bt35/Dhwy47nq8aNWoUANOnT8dutwMgT8txP69LwJ07dwZg586dTi3d\nuzEqzcyZMyktLeVvf/sbRUVFAFy+fPmOLRtfZbT6u3Tpwtq1a2natKnT+ydOnADgj3/8I+vXr2f/\n/v387ne/A2DevHmeDdYF4uLiiIyMdFkCDggIoFWrVrRo0QIAi0VrA1eriIgIAGrXrq05Es976qmn\nGDlyJLGxsbRv3958fcqUKQAUFRXxzDPPsGbNGg4ePOjS75Y+YCGE0MTrWsCnT58G4Pvvv79jC/jg\nwYOUlJTw7LPPAhWX1GvWrHF/kF7ivffeAzD7uv+XceOtQYMG7Nmzh7i4OKKjoz0Wn6u9+uqrHDhw\nwGXHa9q0KWPHjmXt2rUAFBQUuOzYvqJfv34ATJo0yXytoKCAhIQEzp8/ryssjxg2bBgAGRkZhIWF\nYbFY2L17N+Hh4QAsXLjQ3NdisRAWFsYrr7zi0hi8LgFfunQJgKlTp5KQkMCRI0cAyMzMNPc5evQo\n/fv3p7S01LxkeP311z0frCZdu3YFYPDgwUDFpfOePXvYvHmzWXGKi4sBOHLkCJcvX6Zv374+fZkd\nEODaC7YVK1YAFV011U3v3r1ZtWoVgFNjZ+HChWZDyN/UrFmT7t27A7B8+XLA0ZW3d+9eZs+ezf79\n+81umA0bNgAwYMAAAPfcK1BKeWwD1P1sQUFBymKxKIvForKyslRWVpay2Wxq+PDh93Wcu22eLIOH\nLZOYmBh16dIldenSJWW1Ws1t06ZNqkGDBmrw4MEqNTVVpaamqvDwcBUeHm5+1mazqWvXrqlr166p\nLl26+EyZdOzYUXXs2FGVlpaqNWvWuOz/e15enrLb7apHjx6qR48eXl1PHqSu3G1bvny5stlsTtvO\nnTv9+vwZNWqU03ljtVrVli1bVFBQkLlPSkqKSklJcdrn9OnTTueSq8pE+oCFEEIXb/61unVbuHCh\nWrhwobLZbCo3N1cFBAS4rCXgK7/gjz/+uFq3bp3ZWjl//rw6f/68Onr0qHrppZfu+nmbzWb+oq9b\nt85nymT69Olq+vTpym63u6wF3LhxY1VcXKzsdrtq3ry5at68uVfXk4c9f/53CwsLUzabTZWXl6vy\n8nJ18eJFdfHiRdW3b1+/PX/mzJnjdA5kZmaqzMxMp9YvoI4fP66OHz/u1AJ+4YUX3FIm0gIWQghN\nvO4m3O3MmjULcNyA6tOnD/369WP79u16g/IQ46bAokWLiI+PNydYvPrqq4Dj5kDdunXv65jG2Fdf\n0LZtW/O/v/rqK5ccc9GiRTRu3JhvvvnGLM/qomXLlmzcuNHptSVLlgCQm5urIyS3evvttwFITU3l\n5s2bbNu2DYBp06YBUFZWBkCdOnUYMGBApXHhc+bMIScnxy2x+UwCLi0tBWDs2LH861//Yvny5eza\ntcu8M7l06VIA47LErxjDyeLj4wF44YUXgLtPEfVHhw4duu/PBAUFMWjQIABSUlKAijvbs2fPpqSk\nxHUB+oBBgwbRsWNHwDHhCRxDsfxRSEgIEyZMABy5Ydu2bSQmJlba76c//Snr1q0zRxgBfPDBB4Bj\nIpO7+EwCNhQWFjJq1Ciys7MZOXIkI0eOBKB+/foArF692hx+5S/S09MBxy/ynj17HjjxBgQEmDMG\nfXU4WmhoaKXXOnXqZA5Re+655wBo1qwZtWrVYsSIEQQEBJitHGMm040bN6hZs6Y5Nbu6SExMZMGC\nBQDs37+fn//854BjrRB/VKtWLcLCwsx/T548mUceeQSA0aNHAzBkyBA6dOhAgwYNbu1bNseHG40/\nd/C5BAzw0UcfcfLkSdLT080TzphaGxERwdy5c/nPf/6jM0SXSUhIICYmBnD8gn/yyScPfCy73W5W\nrqNHj7okPk8wkqdSimXLljFjxgyn9zt27Gj+oFitVgCuX7/OsWPHWLlyJYcPHzZ/tIzJBWfPnqVu\n3brVZvJFy5YtAZy6Hr799lu/n2xx8+ZNLl68CEB4eDj//ve/q7xKLioq4urVqzRt2pT//ve/AGza\ntMnt8flkAgbIz8/n5Zdf5vnnnwcgOzsbgPHjxxMZGUn//v11hucydevWpVatWgBcuHCBf/zjH/d9\njNq1a5t96EYf3/Tp010Wo7sZl5CnT582F2e61ZkzZ8w+umPHjgHw2WefVXmscePGAY6T8dtvv3VH\nuF7J6O80roAAsyXsz0pKSswuh82bNxMaGkphYSGAWWdWrVrFpUuXWL9+PU2bNmX9+vUei09GQQgh\nhCY+2wIGx6+bsfaDMa20Zs2axMbGEhcXx+7duzVG53o3bty4r/5tY/TEzJkzmTp1KmfPnjX7k3/4\n4Qe3xOhO77zzzkMfw+iyAiqNBPBHRveVcdPRkJOT45crBFbF6Pc31nioSmxsLH369MFut3v0ykha\nwEIIoYnPtoA7duzISy+9ZC6sUbNmxZ9y7Ngx9u7dqys0t7nXG3BGq2fq1KmAY9WnnJycOy5kXx19\n/PHHukNwO2OsfMOGDc3XDh48aC7ALhzq1q1r3qT2ZB+wzyXgtm3bMmnSJJKSkmjSpEml9202G8XF\nxU43G3yZxWIx7/AnJibeddW33/72t8ycOROoWOFq3bp15qQNUb0Yj6G69XxYunSpT3ZBuZMxOcPT\nvD4BG0l2+PDhAEycONEcUnMrY0LG3LlzH2qolre5dVxikyZNyMzMZOXKlYBjzWSAHj16MHLkSDp1\n6kSzZs04c+YMUFGp3n33XQ2RezeLxUJkZKRL1xf2NtnZ2VUu4ZmXl6chGu82cOBALd/rtQm4cePG\ntG/f3pwiGRUVVWmfgwcPmmvfGkNK/KXlW5UaNWowYcIEsyvh6tWrAERGRpr7HDhwwBxqZkzBFJUp\npVy+vrA3iYmJoX///ub5YDywYOnSpX4/9vdBtGnTRsv3+m8NFEIIL+dVLeDQ0FDzMTsxMTG0bt26\nyv3y8vJIT09n27Zt5iwpf3XgwAFz/QPjhqPRLdO4cWNzv++//57169dXqyeDPKyePXuaT4TwNyEh\nIU71w5gZajxoUjjbt2+f01R9T/GKBPzUU08xdepUnnzySR577LEq9zESbUZGBvPmzXPr/Gxvcvbs\nWYYOHQo4ZvkZN9hulZGRwbJly6rto3UehK+uhSHcIz8/nxMnTtC6dWuzO8KYwuxOXpGAk5KSSEpK\ncnrt+PHjbNq0CZvNBjiWDwSq3cpVUPFst1mzZplTisWD2bJlCwA/+9nPNEfiXgUFBeTl5dG7d2/d\nofiMefPmsWLFCubOnQtUPKjUmN7uDtIHLIQQmlg8uX6uxWLxysV6lVLarkelTCqTMqmalEtlriyT\noKAgNmzYQL9+/QD48MMPAceylffb5XmvZSItYCGE0ERawPjPL7grSZlUJi3gqvlTXQkKCjL7gF97\n7TXAsezB/fYD32uZSALGvyqQq0iZVCYJuGpSVyrzygQshBCigvQBCyGEJpKAhRBCE0nAQgihiSRg\nIYTQRBKwEEJoIglYCCE08ehiPL4+Zs8dpEwqkzKpmpRLZb5eJtICFkIITSQBCyGEJpKAhRBCE0nA\nQgihiSRgIYTQRBKwH8jIyEApRX5+PhEREbrDEcLv7dy5k9zc3Ic+jlc8E+5B/eQnP6FBgwYADB48\nGIBHHnmE9PR0bty4oTM0j2jZsiUAKSkp2O12nnjiCaKiojh9+rTewDR6/PHHAQgMDCQ2NpZ33333\njk+6zcnJ4ZVXXgHg5s2bHolRp8DAQHr16sW8efN4+umndYfjc/785z8D0KtXL1avXv3Qx/PJBNyq\nVSvefPNNevbsSYcOHSq936RJEyZPnqwhMs8yntq6d+9ehgwZojkafdq3b8+oUaOAiodtBgQE8Oij\nj2K327nTkqtDhgxh2bJlALzxxhtcvXrV7fHqFBwczK5duzh37hxNmjTh3LlzukPyGQsWLOBXv/oV\nAOXl5ezcufPhD6qU8tgGqAfdoqKiVFRUlFq2bJn64YcflNVqVTabTZ06dUqdOnVK5efnq/z8fGW1\nWtW5c+dUVFTUPR/bk2XgyjIxtsWLFyubzaasVqsaOHDgQx/P18rkk08+UVartcrNKJd72Z5++mmv\nLRNX1ZWwsDBlt9uV3W5XMTEx1a6uPMy2e/dus67s2LHDJWUifcBCCKGJV3dBBAcH88477wAwbNgw\nwNHvazhx4gQDBw4EoFatWgAcP36csLAwwsLCPByt54WEhADQqVMnzZHotWPHDuLj451eu3DhAitX\nrsRisRgtJQB69uwJQJ8+fTwao7exWLTOqvYqsbGxvPXWWyQnJ3Pp0qUq90lOTqZDhw4UFhYCMGXK\nFJd8t1cn4KSkJH75y19W+V5hYSH9+/fnu+++AyAyMtKToXmFevXqAdCiRQvzte7du1NQUABQbW7G\n/fWvf+Xjjz92eq28vLzK/s2goCAAvvzySx599FEA87OHDx92c6TeQylF3bp1dYfhFbKysoiMjKRd\nu3bs37+/yn3eeustGjVqxNixYwH44osvXPLdXp2AjRsqtzp16hSHDh1i2rRpZvIFiIqK8mRoXqGo\nqAiAVatWMWvWLABmzZpFSUkJAH/5y190heZRVqvVqS7ciXHF1LBhQ/O1s2fPAlSLkTO36tq1KwcO\nHNAdhnbXr19HKUWdOnWqfD8mJoYWLVpgt9tvu8+Dkj5gIYTQxKtbwGPHjmXcuHEAbN++HYCTJ09y\n4cKFSvs2btzYo7F5k9mzZ5stYFE1Y6yvcQl56+X322+/rSUmHaxWK1euXCE4OJg2bdroDker2bNn\nAxAdHU1BQUGlboX69esDMG3aNOrVq8dnn33GBx984NIYpAUshBCaeHULuKio6J5bdsbd7eoqICDg\njjO+qqsRI0aQmppqtvYCAwOd3j969Cjl5eU6QtOipKSEffv2kZCQoDsUbZo3bw5UXA1ZrVYmTpxo\nTmwy/OlPfwIc96KKiorcMnPQqxPw7UyePJn69es7DTGKjo4238/Ly6t2NxfuNuPLn7Vs2ZKRI0cC\n0K9fP6f3evfuXWW5XL16lenTp/Ppp59SVlbmkTiFftHR0Xz44YcA5lDVJUuWsGfPHnMfY4iZMbsS\nYO7cuW6Jx+sTsDHUqn379oCjv84Y81lVq6+4uJjRo0djs9k8G6jQIjo6mpycHKehePdi3759ZGVl\nuSkq39CoUSPdIXhEzZqONJeSksL7779PQICj59XIHT179mTGjBmkp6cTGhpqjr4yxkqvXr2a9957\nzz2xueWoLhAYGEjnzp3ZuHEjAE2bNgWgrKyM4uJi8vLyGDRokJmgDTVq1GDo0KFkZGRUi8VVhONE\nud3Egtt1zSQkJBAfH8+nn37q7vC8VnVZP8S4AbtixQqUUmZ9OHnyJADdunWjW7duDBkyhMcee8zM\nNUaXxJgxY9wWm9clYGNG26BBg8xLBYC0tDQAcnNz+ec//0loaCi5ubmVFuMJDw9n/vz5nDlzxhxg\nXx3Gd96aaGJjY4HqMQ44Pz+fuLg4UlJSANi2bRsAP/74o9N+v/jFLwCYNGmSZwP0Qrt27ao2fcDD\nhg0jOzsbcEzOKSkpYfjw4QBcvnwZgPT0dPr06UO3bt2cujWNLorvvvuOuLg4cxacK8koCCGE0MWb\nVi4KDAxU8+fPV/PnzzdXHdq8ebPavHmzCgkJUSEhIQpQ4eHh6tChQ8pms6mysjJVVlam0tLSVFpa\nmtq4caP52a1bt6qtW7eqvn37qs6dO5vb/36vP6zmVNWqX+3atVPt2rWTFa5ABQcHq+DgYKfyiY+P\n95kycWW5vPjii8put6vS0lIVERGhIiIiHup43lwmubm5qrCwUBUWFqoxY8ZUuU+7du3U/v37b7t6\n3urVq91WJtICFkIITbymD7hGjRrMnj3bHAJSWlpKamoqf//73wHM9Q26d+/OkiVL6Ny5MydOnOC1\n114DHP1a4FhspVevXowYMcK8yWDMojPWC2jVqpXn/jAPWbZsGePHj3d6zZhF+MYbb+gIyasYa0AI\nx7hXcNy8rF27tuZo3CsnJ8e8l3S79ULCwsLMUVbJycl8+eWXTu8ba4W4g9ck4HHjxjFlyhSuX78O\nwPjx49m+fTs9evQAYPTo0QDEx8dTp04d/vCHP5CdnV2pUK9evcrWrVvZunUrycnJgGMwPsBvfvMb\nT/05HmesgFYdBAYGMmDAAMBxU/Zu43jHjBnD4sWLPRGaT8jJyaGgoICoqCjzx3nChAmao3KPjIyM\n274XHBwMwMsvv0xQUBCFhYVs2LDBU6E5eEt/TXFxsbJaraq0tFSVlpaqzz//XBUUFFT55IKZM2eq\nGjVquKx/0Jv7sO5n++abb5TNZjM3Q5s2bfymTJ555hm1ZcsWsy40b978tvuGhoaqlJQUdfny5Up1\n6Nq1a+rZZ5/1mTJxdV1ZvHixunLliqpTp46qU6dOtTx/UlNTVWpqqrJaraq4uFg1a9bM4znFa1rA\n586dIzw83LwkMhYZN8Zp7t27F3Cs3Xrq1CmZaFGFr776itatW5v/9sepyUuWLHEaevjmm29y7dq1\nKvft378/Xbp0MU5UAHbv3g041hA2uq2qK6VUtRwrbzw53FhrXClFVlaWW7sabkduwgkhhCZe0wKO\njY0lMTGRLl26ABWPlDEGS1fHX+r7lZWVxfPPP687DI8ybsLeyYULF9i0aRMAr7/+OlB5okZ1FBQU\nRGJiIoDTpCd/t2PHDqCiJbx27Vp+//vf6wnGV/pr3Ln5ah/W/24RERHmk6GNMY02m82v+oA7d+6s\n3n///bs+4fjrr79WR44cUZmZmSo6Otrn64mr60pRUZEqKysznzbuq+XyIPHOmDFDzZgxw6wrQ4cO\n1ZZTLP//R3iExWLx3JfdB6WUticUSplUdrcyqV27trlS1Zw5c2jYsKE57dxo3eTk5FT5TLiHobNM\nwLV1Zf369TzxxBPmUM2HeX6gN9cVXe61TKQPWAghNJEWMPILXhUpk8r8qQXsSlJXKpMWsBBCeDlJ\nwEIIoYkkYCGE0MSjfcBCCCEqSAtYCCE0kQQshBCaSAIWQghNJAELIYQmkoCFEEITScBCCKGJJGAh\nhNBEErAQQmgiCVgIITSRBCyEEJpIAhZCCE0kAQshhCaSgIUQQhNJwEIIoYkkYCGE0EQSsBBCaCIJ\nWAghNJEELIQQmkgCFkIITSQBCyGEJpKAhRBCE0nAQgihiSRgIYTQ5P8AWhTKsfDZTNgAAAAASUVO\nRK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f0ba55ecf28>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/svhn2mnist/trainB/0.png'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-e051108d0e6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdirname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'trainB'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'{:d}.png'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode)\u001b[0m\n\u001b[1;32m   2607\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2608\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2609\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2610\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2611\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/svhn2mnist/trainB/0.png'"
+     ]
     }
    ],
    "source": [
@@ -280,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
